# mcp_core

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-11-cli-scaffold.md
src/: application.py  health.py  log.py  secret_resolver.py
src/config/: loader.py  models.py
src/mcp_core/: application.py  audit.py  errors.py  plugins.py  secrets.py  transport.py
src/mcp_core/cli/: app.py  connection_manager.py  validators.py  yaml_store.py
src/mcp_core/config/: loader.py  models.py  reload.py
tests/: test_app.py  test_application.py  test_audit.py  test_config_loader.py  test_config_models.py  test_config_reload.py  test_connection_manager.py  test_errors.py  test_health.py  test_logging.py  test_plugins.py  test_secrets.py  test_transport.py  test_validators.py  test_yaml_store.py
