[tool.poetry]
name = "mcp-core"
version = "0.1.0"
description = "Shared scaffolding for MCP servers: config, errors, audit, logging, health, plugins."
authors = []
packages = [{ include = "mcp_core", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6"
pydantic-settings = "^2.2"
pyyaml = "^6.0"
"ruamel.yaml" = "^0.18"
questionary = "^2.0"
structlog = "^24.1"
mcp = "^1.2.0"
uvicorn = ">=0.30"
starlette = ">=0.37"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
