[project]
name = "mcp-core"
version = "0.1.0"
description = "Shared scaffolding for MCP servers: config, errors, audit, logging, health, plugins."
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "pyyaml>=6.0,<7.0",
    "ruamel.yaml>=0.18,<0.19",
    "questionary>=2.0,<3.0",
    "structlog>=24.1,<25.0",
    "mcp>=1.2.0,<2.0.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_core"]
